scroll on mobile bug fixed

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -2,12 +2,18 @@
 
 $rows: 2;
 $cols: 10;
+$boxSide: 70rem;
 $gap: 1rem;
-$boxSide: 81rem;
 $fullWidth: $boxSide - ($cols - 1) * $gap;
 $fullHeight: $boxSide - ($rows - 1) * $gap;
 $rowHeight: $fullHeight / $rows;
 $colWidth: $fullWidth / $cols;
+
+@mixin mobile {
+  @media (max-width: 768px) {
+    @content;
+  }
+}
 
 $bodyBgColorful: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);
 
@@ -57,6 +63,7 @@ body {
   align-items: center;
   background-image: $bodyBgColorful;
   animation: rotation 1s linear alternate;
+
   &.mute {
     background: $bodyBgMute;
 
@@ -121,6 +128,13 @@ body {
   -webkit-animation-fill-mode: forwards;
   animation-fill-mode: forwards;
 
+  @include mobile {
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
+    overflow: unset;
+  }
+
   a {
     color: #333;
     text-decoration: none;
@@ -131,7 +145,6 @@ body {
 
   h1 {
     text-transform: uppercase;
-    font-size: 1.8rem;
     letter-spacing: 0.1rem;
     margin: 2rem 0 0.5rem 0;
     padding: 0 1rem;
@@ -162,8 +175,8 @@ body {
   }
 
   p {
-    font-size: 1.7rem;
-    line-height: 2.5rem;
+    font-size: 1.6rem;
+    line-height: 2.2rem;
     padding: 0 1rem;
   }
 
@@ -175,6 +188,13 @@ body {
     border-radius: 50%;
     overflow: hidden;
     box-sizing: border-box;
+
+    @include mobile {
+      grid-template: auto auto auto auto / 100%;
+      border-radius: 0;
+      overflow: unset;
+    }
+
     &:before {
       content: "";
       position: absolute;
@@ -196,6 +216,15 @@ body {
       -moz-background-size: cover;
       -o-background-size: cover;
       background-size: cover;
+      @include mobile {
+        height: 25vh;
+        grid-area: 1 / 1 / span 1 / span 1;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
+        background-position: 0% 30%;
+      }
 
       .img {
         height: 100%;
@@ -203,24 +232,39 @@ body {
         shape-image-threshold: 0.5;
         float: left;
         visibility: hidden;
+
+        @include mobile {
+          display: none;
+        }
       }
     }
 
     .top-right {
       grid-area: 1 / 5 / span 1 / span 6;
       background-image: $area2BgColorful;
+      @include mobile {
+        grid-area: 2 / 1 / span 1 / span 1;
+      }
       .img {
         height: 100%;
         shape-outside: url(../img/top-right.svg);
         shape-image-threshold: 0.5;
         float: right;
         visibility: hidden;
+        @include mobile {
+          display: none;
+        }
       }
       h1 {
         margin-top: 4rem;
-        font-size: 2.2rem;
+        font-size: 2rem;
       }
       p {
+        @include mobile {
+          &.tags {
+            margin-bottom: 2rem;
+          }
+        }
         span {
           font-size: 1.6rem;
           font-family: monospace;
@@ -233,14 +277,14 @@ body {
 
     .bottom-left {
       grid-area: 2 / 1 / span 1 / span 6;
-
       background-image: $area3BgColorful;
       text-align: right;
+      @include mobile {
+        grid-area: 3 / 1 / span 1 / span 1;
+      }
       h3 {
-        text-transform: uppercase;
         font-size: 1.3rem;
-        letter-spacing: 0.1rem;
-        margin: 2rem 0 0.5rem 0;
+        margin: 1rem 0 0.3rem 0;
         padding-right: 0.2rem;
         a {
           color: #fff;
@@ -251,7 +295,7 @@ body {
         }
       }
       p {
-        font-size: 1.4rem;
+        font-size: 1.2rem;
         line-height: 1.7rem;
       }
 
@@ -261,14 +305,19 @@ body {
         shape-image-threshold: 0.5;
         float: left;
         visibility: hidden;
+        @include mobile {
+          display: none;
+        }
       }
     }
 
     .bottom-right {
       grid-area: 2 / 7 / span 1 / span 4;
-
       background-image: $area4BgColorful;
       transition: 0.5s all;
+      @include mobile {
+        grid-area: 4 / 1 / span 1 / span 1;
+      }
       &:hover {
         background-position: right center;
       }
@@ -278,9 +327,13 @@ body {
         shape-image-threshold: 0.5;
         float: right;
         visibility: hidden;
+        @include mobile {
+          display: none;
+        }
       }
       h1 {
-        text-shadow: #333 0 0 3px;
+        font-size: 2rem;
+        text-shadow: #000 0 0 2px;
       }
       a {
         &:after {
